update biomes, add a new mob, and more